added documentation to everything in the server except collectionDriver.js

--- a/backend/ShuqServer/views/data.jade
+++ b/backend/ShuqServer/views/data.jade
@@ -1,3 +1,7 @@
+//@fileoverview this jade file specifies the format of express pages for collections.
+    Note that the column names and order are taken from the first element in the collection.
+    @param collection the collection name typed
+    @param objects the objects gotten from that collection
 body
     h1= collection
     #objects
