adding singleton model

--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -364,6 +364,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="6sQ-Tf-WFd"/>
+        <segue reference="bbb-NU-3uM"/>
     </inferredMetricsTieBreakers>
 </document>
