--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -103,7 +103,7 @@
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uF3-Vt-nKJ">
                                 <rect key="frame" x="62" y="239" width="197" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="new user" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="83M-H4-37a">
                                 <rect key="frame" x="69" y="86" width="182" height="78"/>
@@ -131,6 +131,7 @@
                         <color key="backgroundColor" red="0.48235297203063965" green="0.67450982332229614" blue="0.95294123888015747" alpha="1" colorSpace="deviceRGB"/>
                     </view>
                     <connections>
+                        <outlet property="continueButton" destination="8jk-7S-NsR" id="wfl-7U-PJT"/>
                         <outlet property="newpassTextField" destination="uF3-Vt-nKJ" id="TLu-RG-GMG"/>
                         <outlet property="newuserTextField" destination="pfm-LI-dQA" id="lAa-zP-7yh"/>
                     </connections>
