--- a/iOS/Shuq/Main.storyboard
+++ b/iOS/Shuq/Main.storyboard
@@ -140,10 +140,10 @@
             </objects>
             <point key="canvasLocation" x="-1376" y="295"/>
         </scene>
-        <!--View Controller-->
+        <!--New User View Controller-->
         <scene sceneID="eET-xD-pzs">
             <objects>
-                <viewController id="6iU-pD-QbR" sceneMemberID="viewController">
+                <viewController id="6iU-pD-QbR" customClass="NewUserViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="lYX-kf-kAs"/>
                         <viewControllerLayoutGuide type="bottom" id="Myq-83-knc"/>
@@ -184,6 +184,10 @@
                         </subviews>
                         <color key="backgroundColor" red="0.48235297199999999" green="0.67450982329999998" blue="0.95294123890000004" alpha="1" colorSpace="deviceRGB"/>
                     </view>
+                    <connections>
+                        <outlet property="createAccountButton" destination="Un5-Tb-rsb" id="qzp-PL-rme"/>
+                        <outlet property="locationField" destination="cNA-Z5-a32" id="wAD-PA-iJv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x4Z-kS-qqQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -456,7 +460,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="BTI-c2-VKA"/>
+        <segue reference="6sQ-Tf-WFd"/>
         <segue reference="KQA-JK-hdH"/>
     </inferredMetricsTieBreakers>
 </document>
